@@ -1,7 +1,8 @@
 
 			     BZFlag release notes
-* new bzfs option -tk: team killers do not die
 * add new updates here without heading until a release
+* Use high water marks for player cnts to reduce looping - Dave Brosius
+* new bzfs option -tk: team killers do not die
 * misc @observer mode fixes - Andrew Greig
 * Improved Mac OS X support - Kevin Avila
 * disallow dud flags (eg jump in a jump world) - Dave Brosius
